# astrolabel

./: README.md  pyproject.toml  tox.ini
astrolabel/: __init__.py  main.py
astrolabel/data/: astrolabel.yml
astrolabel/tests/: test_main.py
examples/: example1.ipynb
