[tool.poetry]
name = "astrolabel"
version = "0.1.0"
description = ""
authors = ["Ivan Kramarenko <im.kramarenko@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ivkram/astrolabel"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.3.1"
dacite = "^1.8.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.examples.dependencies]
matplotlib = "^3.7.2"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
